--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="first-page-wrapper uk-position-cover uk-flex uk-flex-center uk-flex-middle">
             <div class="uk-grid nx-container" style="width: 56%">
-                <div class="uk-width-1-1" style="padding: 30px;">
+                <div class="uk-width-1-1" style="padding: 30px 30px 5px 30px;">
                     <img src="assets/logo.png" width="" alt="">
                 </div>
                 <div class="uk-width-1-1"> <hr /> </div>
